option java_package = "com.hawk.game.protocol";

// struct-------------------------------------------------------

message InstanceState
{
	required string instanceId = 1;
	required int32 star = 2;
	optional int32 countDaily = 3;
}

message ChapterState
{
	// 完成的最高普通副本的章节
	required int32 normalTopChapter = 1;
	// 完成的最高普通副本的索引
	required int32 normalTopIndex = 2;

	// 完成的最高困难副本的章节
	required int32 hardTopChapter = 3;
	// 完成的最高困难副本的索引
	required int32 hardTopIndex = 4;

	// 普通章节宝箱状态列表
	repeated int32 normalBoxState = 5;
	// 困难章节宝箱状态列表
	repeated int32 hardBoxState = 6;
}

message RechargeState
{
	required string productId = 1;
	required int32  buyTimes = 2;
}

// protocol-----------------------------------------------------

message HSStatisticsInfoSync
{
	// 副本状态
	repeated InstanceState instanceState = 1;
	// 章节状态
	required ChapterState chapterState = 2;
	// 宠物图鉴
	repeated string monsterCollect = 3;
	// 当前活力值
	required int32 fatigue = 4;
	// 当前正在累计活力值恢复时间开始时间戳（秒）
	required int32 fatigueBeginTime = 5;
	// 当前技能点
	required int32 skillPoint = 6;
	// 当前正在累计技能点恢复时间开始时间戳（秒）
	required int32 skillPointBeginTime = 7;
	// 服务器时间戳
	optional int32 timeStamp = 8;
	// 订单服务器key
	required string orderServerKey = 9;
	// 商城购买状态
	repeated RechargeState rechargeState = 10;
	// 月卡剩余时间
	required int32  monthCardLeft = 11;
	// 钻石购买金币次数
	required int32  gold2CoinTimes = 12;
	// 多倍经验剩余次数
	required HSStatisticsExpLeftTimeSync expLeftTimes = 13;
}

message HSStatisticsExpLeftTimeSync
{
	// 双倍经验剩余次数
	required int32  doubleExpLeft = 1;
	// 三倍经验剩余次数
	required int32  tripleExpLeft = 2;
}

message HSStatisticsResetSync
{
	// 钻石兑换次数
	required int32 goldChangeTimes = 1;
}

message HSStatisticsShopRefresh
{
	// 商店类型
	required int32 shopType = 1;
}
